<resources>
    <string name="app_name">FocusStart-Android-TestTask</string>
    <string name="bank_identification_number">Bank Identification Number</string>
    <string name="enter_the_card_number">Enter the card number</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Information</string>
    <string name="scheme_network">SCHEME/NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="request_history">Request History</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
</resources>