<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.BinFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/bank_identification_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/binLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_the_card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/binET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6D4D4"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#7AC346"
        android:text="@string/find"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/request_history"
        android:textColor="#0E0E0E"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/requestHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#474646"
        android:textStyle="normal"    />
</androidx.appcompat.widget.LinearLayoutCompat>